--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -136,7 +136,7 @@ margin-top: 20px;
     top: 0;
     width: 100%;
     height: 100%;
-    background-image: url('https://trinity-metals.com/wp-content/uploads/2025/02/Blue-patern.png');
+    background-image: url('https://contents.trinity-metals.com/wp-content/uploads/2025/02/Blue-patern.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
