--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -11,7 +11,7 @@
     .about-hero-section{
         margin-top: -60px;
         min-height: 500px;
-        background-image: url('https://trinity-metals.com/wp-content/uploads/2025/02/about-us-hero.webp');
+        background-image: url('https://contents.trinity-metals.com/wp-content/uploads/2025/02/about-us-hero.webp');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
@@ -152,7 +152,7 @@
       }
     
     .our-mission{
-        background-image: url('https://trinity-metals.com/wp-content/uploads/2025/02/Sustainabilty.webp');
+        background-image: url('https://contents.trinity-metals.com/wp-content/uploads/2025/02/Sustainabilty.webp');
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -163,7 +163,7 @@
     }
     
     .our-vision{
-        background-image: url('https://trinity-metals.com/wp-content/uploads/2025/02/our-vision.webp');
+        background-image: url('https://contents.trinity-metals.com/wp-content/uploads/2025/02/our-vision.webp');
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -301,7 +301,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-image: url('https://trinity-metals.com/wp-content/uploads/2025/02/patterns2.png');
+      background-image: url('https://contents.trinity-metals.com/wp-content/uploads/2025/02/patterns2.png');
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
