--- a/src/pages/Careers/Careers.css
+++ b/src/pages/Careers/Careers.css
@@ -13,7 +13,7 @@
 }
 
 .get-in-career {
-    background-image: url("https://trinity-metals.com/wp-content/uploads/2025/02/Team-mechanic.webp");
+    background-image: url("https://contents.trinity-metals.com/wp-content/uploads/2025/02/Team-mechanic.webp");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
