--- a/src/pages/Disclaimer/Disclaimer.css
+++ b/src/pages/Disclaimer/Disclaimer.css
@@ -1,5 +1,5 @@
 .custom-hero20 {
-  background-image: url('https://trinity-metals.com/wp-content/uploads/2025/05/Aerial_36-scaled.jpg');
+  background-image: url('https://contents.trinity-metals.com/wp-content/uploads/2025/05/Aerial_36-scaled.jpg');
   background-repeat: no-repeat;
   background-position: center calc(65% - 0px);
   background-size: cover;
