--- a/src/pages/Investor/Gallery/Gallery.css
+++ b/src/pages/Investor/Gallery/Gallery.css
@@ -1,8 +1,8 @@
 .photo-gallery{
-    background-image: url('https://trinity-metals.com/wp-content/uploads/2025/02/Mine-filter.webp');
+    background-image: url('https://contents.trinity-metals.com/wp-content/uploads/2025/02/Mine-filter.webp');
 }
 .video-gallery{
-    background-image: url('https://trinity-metals.com/wp-content/uploads/2025/02/2ada71665acdaaf00b1c44191f20e0ec.webp');
+    background-image: url('https://contents.trinity-metals.com/wp-content/uploads/2025/02/2ada71665acdaaf00b1c44191f20e0ec.webp');
 
 }
 
