--- a/src/pages/Investor/Latest-news/Latest-news.css
+++ b/src/pages/Investor/Latest-news/Latest-news.css
@@ -13,7 +13,7 @@ padding-bottom: 80px;
 }
 
 .custom-hero{
-    background-image: url('https://trinity-metals.com/wp-content/uploads/2025/02/Team-mechanic.webp');
+    background-image: url('https://contents.trinity-metals.com/wp-content/uploads/2025/02/Team-mechanic.webp');
     background-repeat: no-repeat;
     background-position: center calc(40% - 0px);
     background-size: cover;
