--- a/src/pages/Investor/Report/Reports.css
+++ b/src/pages/Investor/Report/Reports.css
@@ -1,5 +1,5 @@
 .reports{
-    background-image: url('https://trinity-metals.com/wp-content/uploads/2025/02/Mechanic.webp')!important;
+    background-image: url('https://contents.trinity-metals.com/wp-content/uploads/2025/02/Mechanic.webp')!important;
     background-position: center calc(40% - 65px);
 
 }
