--- a/src/components/Loop-grid/styles.css
+++ b/src/components/Loop-grid/styles.css
@@ -119,7 +119,7 @@ button:disabled {
   justify-content: center;
   align-items: center;
   padding: 8px !important;
-  background-image: url("https://trinity-metals.com/wp-content/uploads/2025/02/Ellipse-blue.svg");
+  background-image: url("https://contents.trinity-metals.com/wp-content/uploads/2025/02/Ellipse-blue.svg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: 10px;
