--- a/src/components/menu/Menu.css
+++ b/src/components/menu/Menu.css
@@ -108,7 +108,7 @@
   top: 50%; 
   transform: translateY(-50%);
   pointer-events: none;
-  background-image: url('https://trinity-metals.com/wp-content/uploads/2025/02/ri_arrow-drop-down-line-1.svg');
+  background-image: url('https://contents.trinity-metals.com/wp-content/uploads/2025/02/ri_arrow-drop-down-line-1.svg');
     background-position: bottom;
     background-repeat: no-repeat;
     background-size: 26px;
