--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -74,6 +74,7 @@
 }
 .site-image-logo {
   width: 100%;
+  object-fit: cover;
 }
 @media (max-width: 992px) {
   .site-logo {
@@ -167,6 +168,7 @@ text-align: left;
   gap: 10px;
   border-radius: 5px;
   gap: 10px;
+  align-items: center;
   display: flex;
 }
 
