Keep local changes 134

--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -143,7 +143,7 @@ text-decoration: none;
 }
 
 .basic-intro-left{
-  background-image: url('https://contents.trinity-metals.com/wp-content/uploads/2025/06/3_24.webp');
+  background-image: url('https://contents.trinity-metals.com/wp-content/uploads/2025/05/3_23-2-1024x751.jpg.webp');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
