--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 #root {
   max-width: 100%;
   margin: 0 auto;
-  font-family: Montserrat, sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 p{
-  font-family: Montserrat, sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 .logo {
