--- a/src/components/single-post-template/Single-post.css
+++ b/src/components/single-post-template/Single-post.css
@@ -102,7 +102,7 @@ color: #04080D;
 }
 
 .the_content p{
-    font-family: Montserrat;
+    font-family: "Montserrat", sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 19px;
