--- a/src/pages/Sustainability/Sastainability.css
+++ b/src/pages/Sustainability/Sastainability.css
@@ -273,7 +273,7 @@ cursor: pointer;
 }
 .download-button span{
 color: #888888;
-font-family: Montserrat;
+font-family: "Montserrat", sans-serif;
 font-weight: 700;
 font-size: 14px;
 line-height: 30px;
