--- a/src/pages/Investor/Latest-news/Latest-news.css
+++ b/src/pages/Investor/Latest-news/Latest-news.css
@@ -1,5 +1,5 @@
 .latest-news{
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr)!important;
 }
 
 .latest-news-wrapper{
